--- a/P009217.opf/meta.yml
+++ b/P009217.opf/meta.yml
@@ -4,4 +4,19 @@ source_metadata:
   id: bdr:W3PD1123
   title: རཏྣ་གླིང་པའི་གཏེར་ཆོས་ཀྱི་ཙཀླི།
   author: ''
-  volumes: {}
+  volumes:
+    eaf5f9fa2df042df93f5eca096f4855f:
+      image_group_id: I3PD1125
+      title: ''
+      volume_number: 1
+      total_pages: 384
+    68c2ecce2f33460ebcdfd6444bf0c212:
+      image_group_id: I3PD1126
+      title: ''
+      volume_number: 2
+      total_pages: 816
+    58ea34154a5f4544bef39f8cecec0807:
+      image_group_id: I3PD1127
+      title: ''
+      volume_number: 3
+      total_pages: 29
