--- a/P009217.opf/layers/v003/pagination.yml
+++ b/P009217.opf/layers/v003/pagination.yml
@@ -3,198 +3,170 @@ annotation_type: pagination
 revision: '00001'
 annotations:
   3347df4b97e541f6bcc53d9d2ca9057d:
-    page_index: 1a
-    page_info: null
-    reference: I3PD11270001
+    imgnum: 1
+    reference: I3PD11270001.tif
     span:
       start: 0
       end: 774
   6ae590b57c8d417696f27423f50e7f4c:
-    page_index: 2a
-    page_info: null
-    reference: I3PD11270003
+    imgnum: 3
+    reference: I3PD11270003.jpg
     span:
       start: 779
       end: 849
   2e6902ab6335412c89c7790490eaf4e0:
-    page_index: 2b
-    page_info: null
-    reference: I3PD11270004
+    imgnum: 4
+    reference: I3PD11270004.jpg
     span:
       start: 854
       end: 970
   adc1c3f5c4904850baaae856a46d4bc6:
-    page_index: 3a
-    page_info: null
-    reference: I3PD11270005
+    imgnum: 5
+    reference: I3PD11270005.jpg
     span:
       start: 975
       end: 1427
   c37d6160c74749558278bf7483bf148e:
-    page_index: 3b
-    page_info: null
-    reference: I3PD11270006
+    imgnum: 6
+    reference: I3PD11270006.jpg
     span:
       start: 1432
       end: 1741
   0179c7a97a2b48b4b66c843e53fdacde:
-    page_index: 4a
-    page_info: null
-    reference: I3PD11270007
+    imgnum: 7
+    reference: I3PD11270007.jpg
     span:
       start: 1746
       end: 2032
   e8aaf574fccc46cfbcbcf57292c6f4e9:
-    page_index: 4b
-    page_info: null
-    reference: I3PD11270008
+    imgnum: 8
+    reference: I3PD11270008.jpg
     span:
       start: 2037
       end: 2399
   32005c8020c94413a2ce532fc6eee254:
-    page_index: 5a
-    page_info: null
-    reference: I3PD11270009
+    imgnum: 9
+    reference: I3PD11270009.jpg
     span:
       start: 2404
       end: 2663
   3e1b2750662f4af38fe1fe8c92913062:
-    page_index: 5b
-    page_info: null
-    reference: I3PD11270010
+    imgnum: 10
+    reference: I3PD11270010.jpg
     span:
       start: 2668
       end: 3031
   1cc84c6d07304c808d9b0c40b5a96a02:
-    page_index: 6a
-    page_info: null
-    reference: I3PD11270011
+    imgnum: 11
+    reference: I3PD11270011.jpg
     span:
       start: 3036
       end: 3221
   3b5dacb7475c4771b601c2a39254a54d:
-    page_index: 6b
-    page_info: null
-    reference: I3PD11270012
+    imgnum: 12
+    reference: I3PD11270012.jpg
     span:
       start: 3226
       end: 3571
   9167932d3fae4d4487de8f22bb116d65:
-    page_index: 7a
-    page_info: null
-    reference: I3PD11270013
+    imgnum: 13
+    reference: I3PD11270013.jpg
     span:
       start: 3576
       end: 3899
   8362a5b516ff4f20a7f5ffdc566f3574:
-    page_index: 7b
-    page_info: null
-    reference: I3PD11270014
+    imgnum: 14
+    reference: I3PD11270014.jpg
     span:
       start: 3904
       end: 4329
   d634331ef6aa4318a26118c920099a4b:
-    page_index: 8a
-    page_info: null
-    reference: I3PD11270015
+    imgnum: 15
+    reference: I3PD11270015.jpg
     span:
       start: 4334
       end: 4638
   84c6ea70b09348e5b800386d718fc0cc:
-    page_index: 8b
-    page_info: null
-    reference: I3PD11270016
+    imgnum: 16
+    reference: I3PD11270016.jpg
     span:
       start: 4643
       end: 4828
   245e0be897b240a28bc38e2c2fae3a5b:
-    page_index: 9a
-    page_info: null
-    reference: I3PD11270017
+    imgnum: 17
+    reference: I3PD11270017.jpg
     span:
       start: 4833
       end: 5245
   00eca713c2264a0f988ef1e621b89f32:
-    page_index: 9b
-    page_info: null
-    reference: I3PD11270018
+    imgnum: 18
+    reference: I3PD11270018.jpg
     span:
       start: 5250
       end: 5663
   e01f7151d8a9481780fe9a66baed14de:
-    page_index: 10a
-    page_info: null
-    reference: I3PD11270019
+    imgnum: 19
+    reference: I3PD11270019.jpg
     span:
       start: 5668
       end: 5965
   f6676cdf9913451db677a50bd26afdd5:
-    page_index: 10b
-    page_info: null
-    reference: I3PD11270020
+    imgnum: 20
+    reference: I3PD11270020.jpg
     span:
       start: 5970
       end: 6172
   a06905060ad84348bee1f9da580c14af:
-    page_index: 11a
-    page_info: null
-    reference: I3PD11270021
+    imgnum: 21
+    reference: I3PD11270021.jpg
     span:
       start: 6177
       end: 6303
   82b080bbffe54b0694068f993ef67930:
-    page_index: 11b
-    page_info: null
-    reference: I3PD11270022
+    imgnum: 22
+    reference: I3PD11270022.jpg
     span:
       start: 6308
       end: 6659
   39f73c2cb23b4481b19e89a6e39bf079:
-    page_index: 12a
-    page_info: null
-    reference: I3PD11270023
+    imgnum: 23
+    reference: I3PD11270023.jpg
     span:
       start: 6664
       end: 6743
   e601d1ec909f405a8b4d406ed21712f3:
-    page_index: 12b
-    page_info: null
-    reference: I3PD11270024
+    imgnum: 24
+    reference: I3PD11270024.jpg
     span:
       start: 6748
       end: 6856
   11dde0a091904a5b9ca29ccd04de1354:
-    page_index: 13a
-    page_info: null
-    reference: I3PD11270025
+    imgnum: 25
+    reference: I3PD11270025.jpg
     span:
       start: 6861
       end: 6933
   9e14a1256f484fea9d6afe5f23713104:
-    page_index: 13b
-    page_info: null
-    reference: I3PD11270026
+    imgnum: 26
+    reference: I3PD11270026.jpg
     span:
       start: 6938
       end: 7056
   132da901e3724a02a0f8e7f89399e74b:
-    page_index: 14a
-    page_info: null
-    reference: I3PD11270027
+    imgnum: 27
+    reference: I3PD11270027.jpg
     span:
       start: 7061
       end: 7250
   24d32c95e980448eb5e8f1a777a3be93:
-    page_index: 14b
-    page_info: null
-    reference: I3PD11270028
+    imgnum: 28
+    reference: I3PD11270028.jpg
     span:
       start: 7255
       end: 7466
   3042a646c6bf4b27ba215efcad3fa40a:
-    page_index: 15a
-    page_info: null
-    reference: I3PD11270029
+    imgnum: 29
+    reference: I3PD11270029.jpg
     span:
       start: 7471
       end: 7682
