--- a/P009217.opf/layers/v001/Pagination.yml
+++ b/P009217.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 3f4cccc0c3754d61aaba622a6f632fec
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   ac55482aac094cdda5082ce1d4678170:
