--- a/P009217.opf/layers/v002/Pagination.yml
+++ b/P009217.opf/layers/v002/Pagination.yml
@@ -1,5 +1,5 @@
 id: 7da78dee7b9741638aa2f173ff2c5ce5
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   54bb9579555d4b95b0509408fe8946e8:
