--- a/P009217.opf/layers/v003/Pagination.yml
+++ b/P009217.opf/layers/v003/Pagination.yml
@@ -1,5 +1,5 @@
 id: 4070d81527444ba996e88fe1cd9ed042
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   3347df4b97e541f6bcc53d9d2ca9057d:
