--- a/P009217.opf/meta.yml
+++ b/P009217.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009217
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:28:30.531386
 source_metadata:
   id: bdr:W3PD1123
   title: རཏྣ་གླིང་པའི་གཏེར་ཆོས་ཀྱི་ཙཀླི།
@@ -25,3 +25,5 @@ source_metadata:
       volume_number: 3
       total_pages: 29
       base_file: v003.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
